gitops/apps/draw-io/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: draw-io-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: draw-io
  template:
    metadata:
      labels:
        app: draw-io
    spec:
      containers:
        - name: draw-io-container
          image: jgraph/drawio:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 2m
              memory: 250Mi
