gitops/apps/draw-io/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: draw-io-ingress
spec:
  ingressClassName: nginx
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: drawio.wittnerlab.com
    external-dns.alpha.kubernetes.io/target: a43b34e6-c752-44d1-99a5-cefa29a1fe53.cfargotunnel.com
  rules:
    - host: drawio.wittnerlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: draw-io-service
                port:
                  number: 8080
